small fixes and removes code
